Make linter happy

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -89,7 +89,9 @@
     - wg-generate-keys
 
 - name: Generate WireGuard public key
-  shell: "echo '{{ wg_private_key }}' | wg pubkey"
+  shell: |
+    set -o pipefail
+    echo '{{ wg_private_key }}' | wg pubkey
   register: wg_public_key_result
   when: not private_key_file_stat.stat.exists
   with_inventory_hostnames:
