--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,5 @@
 galaxy_info:
+  role_name: wireguard
   author: Robert Wimmer
   description: Installs Wireguard incl. systemd integration
   license: GPLv3
